--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "google-map-react": "^2.1.9",
     "morgan": "^1.10.0",
     "node": "^15.12.0",
     "nodemon": "^2.0.7",
