--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Juturnaa/WineAndWags#readme",
   "dependencies": {
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
