--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
+    "react-simple-image-slider": "^2.0.3",
     "router": "^1.3.5"
   },
   "devDependencies": {
