--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Juturnaa/WineAndWags.git"
+    "url": "git+https://github.com/Juturnaa/WineAndWags.git",
+    "seed": ""
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.19.0",
     "express": "^4.17.1",
     "google-map-react": "^2.1.9",
     "morgan": "^1.10.0",
