--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "aws-sdk": "^2.881.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "google-map-react": "^2.1.9",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node": "^15.12.0",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
