--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^16.14.0",
     "react-modal": "^3.12.1",
+    "react-notifications-component": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-simple-image-slider": "^2.0.3",
     "router": "^1.3.5"
