--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "react": "^16.14.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^16.14.0",
+    "react-elastic-carousel": "^0.11.4",
     "react-geocode": "^0.2.3",
     "react-google-maps": "^9.4.5",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-simple-image-slider": "^2.0.3",
-    "router": "^1.3.5"
+    "router": "^1.3.5",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
