--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@reach/combobox": "^0.15.0",
     "@react-google-maps/api": "^2.1.1",
     "aws-sdk": "^2.881.0",
     "axios": "^0.21.1",
@@ -51,7 +52,8 @@
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-simple-image-slider": "^2.0.3",
-    "router": "^1.3.5"
+    "router": "^1.3.5",
+    "use-places-autocomplete": "^1.9.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
