--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "react-router-dom": "^5.2.0",
     "react-simple-image-slider": "^2.0.3",
     "router": "^1.3.5",
-    "use-places-autocomplete": "^1.9.1",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "use-places-autocomplete": "^1.9.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
