--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.5.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^16.14.0",
     "react-elastic-carousel": "^0.11.4",
     "react-geocode": "^0.2.3",
@@ -54,6 +55,9 @@
     "react-router-dom": "^5.2.0",
     "react-simple-image-slider": "^2.0.3",
     "router": "^1.3.5",
+    "simple-peer": "^9.10.0",
+    "socket.io": "^4.0.1",
+    "socket.io-client": "^4.0.1",
     "styled-components": "^5.2.3",
     "use-places-autocomplete": "^1.9.1"
   },
