--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack -d --watch",
-    "start": "nodemon server"
+    "start": "nodemon server && webpack -d --watch"
   },
   "repository": {
     "type": "git",
@@ -79,6 +79,6 @@
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^4.46.0",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "4.6"
   }
 }
